# BasicRayTracer

./: CMakeLists.txt  Camera.h  Image.h  Light.h  Material.h  Model.h  Ray.h  RayTracer.h  Readme.md  Scene.h  Vec3.h  experiments.cpp  main.cpp
models/: face_lowres.off  rectangle.off  simplecube.off  smallcube.off  walls1.off
src/: AABB.h  AreaLight.h  BVH.h  Camera.h  HemisphereMapping.h  HemisphereSampling.h  Image.h  Material.h  Model.h  PointLight.h  Qtable.h  Ray.h  RayTracer.h  Vec3.h  Worley.h
